// =========================================================
//  Sistema Cooperadora — modelo de datos
//  Pegar en https://dbdiagram.io/d  (lenguaje DBML)
//  Generado desde el catálogo de la base creada con
//  crear_base_cooperadora.sql, así que no puede diferir de ella.
// =========================================================

Table usuarios [headercolor: #5d7050, note: 'Personal de la Cooperadora que carga, verifica o resuelve.'] {
  id serial [pk]
  username varchar(50) [unique, not null]
  email varchar(120) [unique, not null]
  password_hash varchar(255) [not null]
  nombre varchar(100) [not null]
  apellido varchar(100) [not null]
  rol varchar(20) [not null]
  activo boolean [not null, default: `true`]
  ultimo_login timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  // ck_usuarios_rol: CHECK (rol = ANY (('admin', 'asistente', 'tesorera', 'preceptoria')))
}

Table carreras [headercolor: #5d7050, note: 'Cada carrera de la institución.'] {
  id serial [pk]
  nombre varchar(100) [unique, not null]
  activo boolean [not null, default: `true`]
  created_at timestamp [not null, default: `now()`]
}

Table carrera_anios [headercolor: #5d7050, note: 'Los años que dicta cada carrera: una fila por año (1FN).'] {
  carrera_id integer [not null]
  anio smallint [not null]

  indexes {
    (carrera_id, anio) [pk]
  }

  // ck_carrera_anios_rango: CHECK ((anio >= 1) AND (anio <= 7))
}

Table ejercicios [headercolor: #5d7050, note: 'Año contable con la cuota fijada en asamblea.'] {
  id serial [pk]
  anio smallint [unique, not null]
  cuota numeric(12,2) [not null]
  fecha_asamblea date
  activo boolean [not null, default: `true`]
  cerrado boolean [not null, default: `false`]
  created_at timestamp [not null, default: `now()`]

  // ck_ejercicios_cuota: CHECK (cuota > (0))
}

Table aportantes [headercolor: #a8461f, note: 'Quien le transfiere plata a la Cooperadora. Una sola tabla, sin subtipos.'] {
  id serial [pk]
  dni varchar(15) [unique, not null]
  nombre varchar(100) [not null]
  apellido varchar(100) [not null]
  cuit varchar(13)
  carrera_id integer
  anio smallint
  email varchar(120)
  telefono varchar(30)
  activo boolean [not null, default: `true`]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table operaciones [headercolor: #a8461f, note: 'Cada entrada de dinero. Única dueña del código de transacción y del hash.'] {
  id serial [pk]
  medio_pago varchar(20) [not null]
  codigo_transaccion varchar(100) [unique]
  hash_comprobante varchar(64) [unique]
  comprobante_nombre varchar(255)
  comprobante_ruta varchar(255)
  importe numeric(12,2) [not null]
  fecha date [not null]
  cuit_ordenante varchar(13)
  alcance varchar(12) [not null]
  created_at timestamp [not null, default: `now()`]

  // ck_operaciones_alcance: CHECK (alcance = ANY (('individual', 'grupal')))
  // ck_operaciones_codigo: CHECK ((medio_pago = 'efectivo') OR (codigo_transaccion IS NOT NULL))
  // ck_operaciones_importe: CHECK (importe > (0))
  // ck_operaciones_medio: CHECK (medio_pago = ANY (('transferencia', 'deposito', 'efectivo')))
}

Table pagos_grupales [headercolor: #a8461f, note: 'Una transferencia que cubre a varias personas.'] {
  id serial [pk]
  codigo_seguimiento varchar(20) [unique, not null]
  operacion_id integer [unique, not null]
  estado varchar(20) [not null, default: `'pendiente'`]
  usuario_id integer
  created_at timestamp [not null, default: `now()`]

  // ck_pg_estado: CHECK (estado = ANY (('pendiente', 'verificado', 'rechazado')))
}

Table pagos [headercolor: #a8461f, note: 'Cada cobro imputado a un aportante. Nace pendiente y no mueve saldo.'] {
  id serial [pk]
  codigo_seguimiento varchar(20) [unique, not null]
  tipo varchar(30) [not null]
  importe numeric(12,2) [not null]
  fecha date [not null]
  estado varchar(20) [not null, default: `'pendiente'`]
  solicita_libreta boolean [not null, default: `false`]
  observaciones text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  operacion_id integer [unique]
  aportante_id integer [not null]
  fondo_id integer [not null]
  ejercicio_id integer [not null]
  usuario_id integer
  pago_grupal_id integer

  indexes {
    (aportante_id, pago_grupal_id) [unique]
  }

  // ck_pagos_estado: CHECK (estado = ANY (('pendiente', 'verificado', 'rechazado', 'anulado')))
  // ck_pagos_importe: CHECK (importe > (0))
  // ck_pagos_origen: CHECK (((operacion_id IS NOT NULL) AND (pago_grupal_id IS NULL)) OR ((operacion_id IS NULL) AND (pago_grupal_id IS NOT NULL)))
  // ck_pagos_tipo: CHECK (tipo = ANY (('cuota', 'adicional', 'aporte_carrera', 'libreta_duplicado')))
}

Table verificaciones [headercolor: #8a6a12, note: 'Historial: cada revisión de un pago, con su resultado.'] {
  id serial [pk]
  resultado varchar(20) [not null]
  motivo text
  fecha timestamp [not null, default: `now()`]
  pago_id integer
  pago_grupal_id integer
  usuario_id integer [not null]

  // ck_ver_motivo: CHECK ((resultado <> 'rechazado') OR (motivo IS NOT NULL))
  // ck_ver_objeto: CHECK (((pago_id IS NOT NULL) AND (pago_grupal_id IS NULL)) OR ((pago_id IS NULL) AND (pago_grupal_id IS NOT NULL)))
  // ck_ver_resultado: CHECK (resultado = ANY (('verificado', 'rechazado')))
}

Table recibos [headercolor: #a8461f, note: 'Comprobante formal con numeración propia.'] {
  id serial [pk]
  letra char(1) [not null]
  serie smallint [not null]
  numero integer [not null]
  fecha_emision timestamp [not null, default: `now()`]
  concepto varchar(200)
  razon_social varchar(200) [not null]
  documento varchar(15) [not null]
  importe numeric(12,2) [not null]
  pago_id integer [unique, not null]

  indexes {
    (letra, serie, numero) [unique]
  }

  // ck_recibos_letra: CHECK (letra = ANY ('A', 'B', 'C', 'X'))
}

Table libretas [headercolor: #6b4a86, note: 'Cada entrega de libreta: quién la recibió, quién la entregó y cuándo.'] {
  id serial [pk]
  tipo varchar(12) [not null]
  fecha_entrega timestamp [not null, default: `now()`]
  observaciones text
  aportante_id integer [not null]
  ejercicio_id integer [not null]
  entregada_por_id integer [not null]
  pago_id integer [unique]

  // ck_libretas_duplicado: CHECK ((tipo <> 'duplicado') OR (pago_id IS NOT NULL))
  // ck_libretas_tipo: CHECK (tipo = ANY (('original', 'duplicado')))
}

Table saldos_aportantes [headercolor: #a8461f, note: 'Caché del estado de cuota. Se reconstruye desde los pagos verificados.'] {
  id serial [pk]
  aportante_id integer [not null]
  ejercicio_id integer [not null]
  pagado numeric(12,2) [not null, default: `0`]
  saldo_pendiente numeric(12,2) [not null, default: `0`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (aportante_id, ejercicio_id) [unique]
  }
}

Table fondos [headercolor: #1f6360, note: 'Cada bolsillo de la Cooperadora.'] {
  id serial [pk]
  nombre varchar(100) [not null]
  tipo varchar(20) [not null]
  saldo numeric(14,2) [not null, default: `0`]
  activo boolean [not null, default: `true`]
  carrera_id integer
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (tipo, carrera_id) [unique]
  }

  // ck_fondos_tipo: CHECK (tipo = ANY (('capital', 'carrera', 'evento')))
}

Table movimientos_fondo [headercolor: #1f6360, note: 'Libro mayor de cada fondo. Sólo se agrega.'] {
  id serial [pk]
  monto numeric(14,2) [not null]
  saldo_anterior numeric(14,2)
  saldo_resultante numeric(14,2) [not null]
  motivo varchar(150)
  origen varchar(20) [not null]
  fondo_id integer [not null]
  pago_id integer
  solicitud_id integer
  usuario_id integer
  created_at timestamp [not null, default: `now()`]

  // ck_mov_coherencia: CHECK (((origen = 'pago') AND (pago_id IS NOT NULL) AND (solicitud_id IS NULL)) OR ((origen = 'solicitud') AND (solicitud_id IS NOT NULL) AND (pago_id IS NULL)) OR ((origen = ANY (('ajuste', 'apertura'))) AND (pago_id IS NULL) AND (solicitud_id IS NULL)))
  // ck_mov_origen: CHECK (origen = ANY (('pago', 'solicitud', 'ajuste', 'apertura')))
}

Table solicitudes_fondo [headercolor: #1f6360, note: 'Pedido de fondos, evento o viaje.'] {
  id serial [pk]
  codigo_seguimiento varchar(20) [unique, not null]
  responsable varchar(120) [not null]
  contacto varchar(120) [not null]
  curso varchar(50)
  tipo varchar(20) [not null]
  concepto varchar(200) [not null]
  importe_estimado numeric(14,2)
  importe_aprobado numeric(14,2)
  fecha_estimada date
  justificacion text [not null]
  estado varchar(20) [not null, default: `'pendiente'`]
  resolucion text
  fecha_resolucion timestamp
  carrera_id integer
  fondo_id integer
  resuelta_por_id integer
  created_at timestamp [not null, default: `now()`]

  // ck_sol_aprobada: CHECK ((estado <> 'aprobada') OR ((importe_aprobado IS NOT NULL) AND (fondo_id IS NOT NULL)))
  // ck_sol_estado: CHECK (estado = ANY (('pendiente', 'aprobada', 'rechazada')))
  // ck_sol_tipo: CHECK (tipo = ANY (('fondos', 'evento', 'viaje')))
}

Table auditoria [headercolor: #8a6a12, note: 'Un renglón por operación importante. Sin claves foráneas, a propósito.'] {
  id serial [pk]
  usuario varchar(50) [not null]
  accion varchar(100) [not null]
  tabla varchar(50)
  registro_id integer
  detalle jsonb
  ip varchar(45)
  user_agent varchar(255)
  created_at timestamp [not null, default: `now()`]
}

// ---------------- relaciones ----------------
Ref: aportantes.(carrera_id, anio) > carrera_anios.(carrera_id, anio)
Ref: carrera_anios.carrera_id > carreras.id
Ref: fondos.carrera_id > carreras.id
Ref: libretas.aportante_id > aportantes.id
Ref: libretas.ejercicio_id > ejercicios.id
Ref: libretas.entregada_por_id > usuarios.id
Ref: libretas.pago_id > pagos.id
Ref: movimientos_fondo.fondo_id > fondos.id
Ref: movimientos_fondo.pago_id > pagos.id
Ref: movimientos_fondo.solicitud_id > solicitudes_fondo.id
Ref: movimientos_fondo.usuario_id > usuarios.id
Ref: pagos.aportante_id > aportantes.id
Ref: pagos.ejercicio_id > ejercicios.id
Ref: pagos.fondo_id > fondos.id
Ref: pagos.operacion_id > operaciones.id
Ref: pagos.pago_grupal_id > pagos_grupales.id
Ref: pagos.usuario_id > usuarios.id
Ref: pagos_grupales.operacion_id > operaciones.id
Ref: pagos_grupales.usuario_id > usuarios.id
Ref: recibos.pago_id > pagos.id
Ref: saldos_aportantes.aportante_id > aportantes.id
Ref: saldos_aportantes.ejercicio_id > ejercicios.id
Ref: solicitudes_fondo.carrera_id > carreras.id
Ref: solicitudes_fondo.fondo_id > fondos.id
Ref: solicitudes_fondo.resuelta_por_id > usuarios.id
Ref: verificaciones.pago_grupal_id > pagos_grupales.id
Ref: verificaciones.pago_id > pagos.id
Ref: verificaciones.usuario_id > usuarios.id
